--- a/css/styles.css
+++ b/css/styles.css
@@ -1,441 +1,280 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-}
-
-/* Estilos que afectan a todos los HTML */
-
-header {
-    width: 100%;
-    height: 100px;
-    background-color: #FFFFFF;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    width: 80px;
-    margin-left: 100%;
-}
-
-.nav-border {
-    border-bottom: 0.5px solid #c2c0c093;
-    box-shadow: 0 6px 5px 5px rgba(122, 122, 122, 0.192), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-}
-
-header nav ul {
-    display: flex;
-    list-style: none;
-}
-
-header nav ul li a{
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    margin: 0 10px;
-}
-
-.icono-menu {
-    font-size: 15px;
-}
-
-
-.wapp {
-    position: fixed;  /* Posicion fija, ejemplo el uso de un icono directo a wapp */
-    bottom: 10px;
-    right: 10px;
-    z-index: 1;
-}
-
-.wapp img {
-    width: 80px;
-}
-
-footer {
-    width: 100%;
-    height: auto;
-    align-items: center;
-    text-align: center;
-    margin-top: 60px;
-}
-
-footer ul {
-    display: flex;
-    width: 50%;
-    margin: auto;
-    list-style: none;
-    justify-content: space-evenly;
-}
-
-footer ul li a {
-    text-decoration: none;
-    color: black;
-}
-
-
-.titulo h1{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin: 60px 10px 140px 10px;
-    font-size: 4em;
-    color: #2c3e50;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    background: linear-gradient(to right, #1472ec, #03042b);
-    background-clip: text;
-    color: transparent;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    animation: fadeIn 2s ease-in-out;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(-20px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-/* Estilos para HTML de pagina principal */
-
-/* Section, quienes somos */
-
-.sect-quienes-somos {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    margin: 70px 25px;
-}
-
-.sect-quienes-somos h2 {
-    font-size: 2rem;
-    text-align: center;
-}
-
-.sect-quienes-somos p {
-    font-size: 1rem;
-    padding: 20px;
-}
-
-.sect-quienes-somos a {
-    text-decoration: none;
-    font-size: 1rem;
-    color: white;
-}
-
-.sect-quienes-somos img {
-    max-width: 700px;
-}
-
-
-/* Section, servicios */
-
-.sect-servicios {
-    padding: 20px;
-    margin-top: 60px;
-}
-
-.sect-servicios a {
-    text-decoration: none;
-    color: black;
-}
-
-.servicios-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
-    margin-top: 40px;
-}
-
-.servicio {
-    background-color: #f0f0f0;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    font-size: 16px;
-}
-
-/* Section, Horario de atencion */
-
-.sect-horarios {
-    padding: 20px;
-    text-align: center;
-}
-
-.horarios-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-}
-
-.contacto {
-    margin-top: 20px;
-    text-align: right;
-}
-
-.contacto p {
-    margin-bottom: 10px;
-}
-
-.contacto ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.contacto ul li {
-    font-size: 16px;
-    margin-bottom: 5px;
-}
-
-
-/* Section, Ubicacion*/
-
-.sect-ubicacion {
-    padding: 20px;
-}
-
-.ubicacion-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    align-items: center;
-}
-
-.mapa {
-    height: 400px; 
-    overflow: hidden; /* Oculta el desbordamiento */
-    border-radius: 8px; /* Bordes redondeados */
-}
-
-.detalles {
-    text-align: left; /* Alineación del texto a la izquierda */
-}
-
-.boton {
-    display: inline-block;
-    background-color: #007bff;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-}
-
-.boton:hover {
-    background-color: #0056b3;
-}
-
-
-/*Estilos para el HTML de Quienes somos  */
-
-
 .quienes-somos-pres {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    justify-items: center;
-    margin: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  margin: 20px;
+}
+.quienes-somos-pres .card {
+  flex: 1 1 calc(25% - 40px);
+  max-width: 400px;
+  padding: 20px;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(202, 7, 7, 0.1);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.quienes-somos-pres .card img {
+  width: 100%;
+  border-radius: 50%;
+  max-width: 150px;
+  height: auto;
+}
+.quienes-somos-pres .card .info {
+  margin-top: 20px;
+}
+.quienes-somos-pres .card h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+.quienes-somos-pres .card p {
+  font-size: 1rem;
+  color: #666;
 }
 
-.card {
-    width: 100%;
-    max-width: 300px;
-    padding: 20px;
-    background-color: #f0f0f0;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    align-items: center;
+.contact-form {
+  max-width: 600px;
+  margin: 50px auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.contact-form h1 {
+  font-size: 38px;
+  margin-bottom: 50px;
+  text-align: center;
 }
 
-.card img {
-    width: 100%;
-    border-radius: 50%;
-    max-width: 150px;
-    height: auto;
+.contact-form input[type=text],
+.contact-form input[type=email],
+.contact-form textarea {
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+}
+.contact-form input[type=text] textarea,
+.contact-form input[type=email] textarea,
+.contact-form textarea textarea {
+  height: 130px;
 }
 
-.card .info {
-    margin-top: 20px;
+.contact-form input[type=submit] {
+  background-color: #4c87af;
+  color: #fff;
+  border: none;
+  padding: 12px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.card h3 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
+.contact-form input[type=submit]:hover {
+  background-color: #2d648a;
 }
 
-.card p {
-    font-size: 1rem;
-    color: #666;
+.color-a {
+  font-weight: bold !important;
 }
-
-/* Estilos para HTML de Servicios */
-
-.servicios-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    gap: 20px;
-    padding: 20px;
+.color-a:hover {
+  color: rgb(11, 86, 156) !important;
 }
-
-/* Cada servicio usando Flexbox */
-
-.servicio {
-    display: flex;
-    flex-direction: column;
-    background: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    overflow: hidden;
-    transition: transform 0.3s;
-}
-
-.servicio:hover {
-    transform: scale(1.05);
-}
-
-.servicio img {
-    width: 100%;
-    height: auto;
-}
-
-.servicio .descripcion {
-    padding: 20px;
-}
-
-.servicio h3 {
-    text-align: center;
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-}
-
-.servicio p {
-    font-size: 1rem;
-    color: #666;
-}
-
-/* Estilos para HTML de Agentes fisicos */
 
 .ag-container {
-    display: flex;
-    padding: 50px;
-    flex-direction: column; /*Por si se agrega mas a futuro*/
+  display: flex;
+  padding: 50px;
+  flex-direction: column;
 }
 
 .agentes-fisicos {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
-
 .agentes-fisicos img {
-    max-width: 700px;
+  max-width: 700px;
 }
-
 .agentes-fisicos h1 {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 25px;
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 25px;
 }
-
 .agentes-fisicos p {
-    font-size: 1rem;
-    padding: 25px;
+  font-size: 1rem;
+  padding: 25px;
 }
 
-/* Estilos para HTML de Contacto */
-
-.contact-form {
-    max-width: 600px;
-    margin: 50px auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-.contact-form h1 {
-    font-size: 38px;
-    margin-bottom: 50px;
-    text-align: center;
+.servicios-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 20px;
+  padding: 20px;
 }
 
-.contact-form input[type="text"],
-    .contact-form input[type="email"],
-    .contact-form textarea {
-        width: calc(100% - 20px);
-        padding: 10px;
-        margin-bottom: 15px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        font-size: 14px;
-    }
-    .contact-form textarea {
-        height: 130px;
-    }
-    .contact-form input[type="submit"] {
-        background-color: #4c87af;
-        color: #fff;
-        border: none;
-        padding: 12px 20px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        border-radius: 4px;
-        cursor: pointer;
-    }
-    .contact-form input[type="submit"]:hover {
-        background-color: #2d648a;
-    }
+.servicio {
+  display: flex;
+  flex-direction: column;
+  background: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: transform 0.3s;
+}
+.servicio:hover {
+  transform: scale(1.05);
+}
+.servicio img {
+  width: 100%;
+  height: auto;
+}
+.servicio .descripcion {
+  padding: 20px;
+}
+.servicio h3 {
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+.servicio p {
+  font-size: 1rem;
+  color: #666;
+}
 
-    .color-a {
-        font-weight: bold !important;
-    }
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
 
-    .color-a:hover {
-        color: rgb(11, 86, 156) !important;
-    }
+.logo {
+  width: 80px;
+  margin-left: 100%;
+}
 
-    /* Media para moviles */
+header {
+  width: 100%;
+  height: 100px;
+  background-color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+}
+header .nav-border {
+  border-bottom: 0.5px solid rgba(194, 192, 192, 0.5764705882);
+  box-shadow: 0 6px 5px 5px rgba(122, 122, 122, 0.192), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+header .icono-menu {
+  font-size: 15px;
+}
 
-    @media (max-width: 768px) {
+footer {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 60px;
+}
+footer ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  margin: auto;
+  list-style: none;
+  justify-content: space-evenly;
+}
+footer ul li a {
+  text-decoration: none;
+  color: black;
+}
 
-        .menu-despegable {
-            display: none;
-        }
-        .quienes-somos-pres {
-            grid-template-columns: 1fr;
-        }
+.wapp {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 1;
+  cursor: pointer;
+}
+.wapp img {
+  width: 80px;
+}
+.wapp img:hover {
+  width: 90px;
+  transition: 1.5s;
+}
 
-        .servicio {
-            flex-direction: column;
-        }
-    
-        .servicio img {
-            margin-bottom: 15px;
-        }
-    
-        .servicio .descripcion {
-            padding: 15px;
-            text-align: center; 
-        }
+.titulo h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 60px 10px 140px 10px;
+  font-size: 4em;
+  color: #2c3e50;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  background: linear-gradient(to right, #1472ec, #03042b);
+  background-clip: text;
+  color: transparent;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  animation: fadeIn 2s ease-in-out;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
-        .agentes-fisicos {
-            flex-direction: column;
-            align-items: center;
-        }
-        
-        .agentes-fisicos img {
-            max-width: 100%; 
-        }
-        
-        .agentes-fisicos div {
-            text-align: center;
-        }
-    }
+.boton {
+  display: inline-block;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+.boton:hover {
+  background-color: #0056b3;
+}
 
-    
+.sect-quienes-somos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 70px 25px;
+}
+.sect-quienes-somos h2 {
+  font-size: 2rem;
+  text-align: center;
+}
+.sect-quienes-somos p {
+  font-size: 1rem;
+  padding: 20px;
+}
+.sect-quienes-somos a {
+  text-decoration: note;
+  font-size: 1rem;
+  color: white;
+}
+.sect-quienes-somos img {
+  max-width: 700px;
+}
+
+/*# sourceMappingURL=styles.css.map */
