--- a/sass/main.scss
+++ b/sass/main.scss
@@ -129,3 +129,35 @@ footer {
 
 //Seccion Ubicacion
 
+
+
+
+
+
+//Responsive Moviles
+
+
+@media (max-width: 768px) {
+
+    .quienes-somos-pres .card {
+        flex: 1 1 calc(100% - 40px); // Ajusta el valor según sea necesario
+        max-width: 300px;
+    }
+
+    .agentes-fisicos {
+        flex-direction: column;
+        align-items: center;
+        img {
+            max-width: 100%; 
+        }
+        div {
+            text-align: center;
+        }
+    }
+
+    .titulo h1 {
+        font-size: 3.5em;
+        transition: 1.5s;
+        margin: 30px 0px;
+    }
+}
