--- a/css/styles.css
+++ b/css/styles.css
@@ -297,6 +297,9 @@ footer ul li a {
     transition: 1.5s;
     margin: 30px 0px;
   }
+  .servicios-container {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
