--- a/sass/main.scss
+++ b/sass/main.scss
@@ -160,4 +160,8 @@ footer {
         transition: 1.5s;
         margin: 30px 0px;
     }
+
+    .servicios-container {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
 }
