--- a/css/styles.css
+++ b/css/styles.css
@@ -290,7 +290,7 @@ footer ul li a {
     max-width: 100%;
   }
   .agentes-fisicos div {
-    text-align: center;
+    text-align: left;
   }
   .titulo h1 {
     font-size: 3.5em;
