--- a/sass/main.scss
+++ b/sass/main.scss
@@ -151,7 +151,7 @@ footer {
             max-width: 100%; 
         }
         div {
-            text-align: center;
+            text-align: left;
         }
     }
 
