--- a/sass/utilidades/_servicios.scss
+++ b/sass/utilidades/_servicios.scss
@@ -18,7 +18,7 @@
     }
     img{
         width: 100%;
-        height: auto;
+        height: 40%;
     }
     .descripcion{
         padding: 20px;
