--- a/sass/utilidades/_mixin.scss
+++ b/sass/utilidades/_mixin.scss
@@ -31,23 +31,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
     img {
       width: 100%;
       border-radius: 50%;
       max-width: 150px;
       height: auto;
+      max-height: 200px;
     }
-
     .info {
       margin-top: 20px;
     }
-
     h3 {
       font-size: 1.5rem;
       margin-bottom: 10px;
     }
-
     p {
       font-size: 1rem;
       color: #666;
