--- a/css/styles.css
+++ b/css/styles.css
@@ -335,6 +335,7 @@ footer ul li a {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
+  overflow: hidden;
 }
 .sect-horarios .horarios-grid div {
   background: rgba(255, 255, 255, 0.8);
@@ -369,6 +370,7 @@ footer ul li a {
   padding: 40px 25px;
   border-radius: 10px;
   margin: 40px 0;
+  overflow: hidden;
 }
 .sect-ubicacion h2 {
   text-align: center;
