--- a/css/styles.css
+++ b/css/styles.css
@@ -418,6 +418,38 @@ footer ul li a {
   background-color: #0056b3;
 }
 
+.footer {
+  background-color: #f8f8f8;
+  color: #000000;
+  padding: 20px 0;
+  text-align: center;
+  position: relative;
+}
+.footer .container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer .container p {
+  margin-top: 2em;
+  font-size: 14px;
+}
+.footer .container .social-media {
+  list-style: none;
+  padding: 0;
+  margin: 10px 0 0;
+  display: flex;
+}
+.footer .container .social-media li {
+  margin: 0 10px;
+}
+.footer .container .social-media li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 14px;
+}
+
 @media (max-width: 768px) {
   .quienes-somos-pres .card {
     flex: 1 1 calc(100% - 40px);
