--- a/sass/main.scss
+++ b/sass/main.scss
@@ -295,9 +295,37 @@ footer {
 }
 
 //Footer
-
-
-
+.footer {
+    background-color: #f8f8f8;
+    color: #000000;
+    padding: 20px 0;
+    text-align: center;
+    position: relative; 
+    .container {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      p {
+        margin-top: 2em;
+        font-size: 14px;
+      }  
+      .social-media {
+        list-style: none;
+        padding: 0;
+        margin: 10px 0 0;
+        display: flex;
+        li {
+          margin: 0 10px;
+          a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 14px;           
+          }
+        }
+      }
+    }
+  }
 
 
 
