--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,7 @@ header {
 }
 header .nav-border {
   border-bottom: 0.5px solid rgba(194, 192, 192, 0.5764705882);
-  box-shadow: 0 6px 5px 5px rgba(122, 122, 122, 0.192), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 6px 5px 5px rgba(240, 137, 137, 0.192), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 header .icono-menu {
   font-size: 15px;
@@ -304,23 +304,29 @@ footer ul li a {
   margin-top: 100px;
 }
 .sect-servicios .servicio {
-  background-color: #f0f0f0;
+  background-color: #e0f2f1;
   padding: 20px;
-  border-radius: 5px;
-  transition: background-color 0.3s;
+  border-radius: 10px;
+  transition: background-color 0.3s, transform 0.3s;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .sect-servicios .servicio a {
   text-decoration: none;
-  color: #333;
+  color: rgb(0, 0, 0);
   font-size: 1.2rem;
   display: block;
+  font-family: "Open Sans", sans-serif;
 }
 .sect-servicios .servicio:hover {
-  background-color: #e0e0e0;
+  background-color: #b2dfdb;
+  transform: scale(1.05);
 }
 
 .sect-horarios {
-  background-color: #1472ec;
+  background-color: #e0f2f1;
   padding: 40px 25px;
   text-align: center;
   margin: 40px 0;
@@ -330,7 +336,6 @@ footer ul li a {
   margin-bottom: 20px;
 }
 .sect-horarios .horarios-grid {
-  background-color: #1472ec;
   margin-top: 60px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -419,7 +424,7 @@ footer ul li a {
 }
 
 .footer {
-  background-color: #f8f8f8;
+  background-color: #e0f2f1;
   color: #000000;
   padding: 20px 0;
   text-align: center;
