--- a/sass/main.scss
+++ b/sass/main.scss
@@ -63,9 +63,6 @@ footer {
     }
 }
 
-
-//corregir, genera un scroll al achicar la pantalla para movil
-
 .titulo h1 {
     @include flex-center;
     text-align: center;
@@ -106,17 +103,14 @@ footer {
     text-align: center;
     margin: 70px 25px;
     gap: 20px;
-
     h2 {
         font-size: 2rem;
         text-align: center;
     }
-
     p {
         font-size: 1rem;
         padding: 20px;
     }
-
     a {
         text-decoration: none;
         font-size: 1rem;
@@ -126,7 +120,6 @@ footer {
         border-radius: 5px;
         margin-top: 10px;
         transition: background-color 0.3s;
-
         &:hover {
             background-color: #0056b3;
         }
@@ -139,15 +132,6 @@ footer {
         border-radius: 10px;
     }
 }
-
-
-
-
-
-
-
-
-
 
 //Seccion de servicios.
 //Hacer desde cero
@@ -167,38 +151,40 @@ footer {
         margin-top: 100px;
     }
     .servicio {
-        background-color: #f0f0f0;
+        background-color: $sections-bg;
         padding: 20px;
-        border-radius: 5px;
-        transition: background-color 0.3s;
+        border-radius: 10px;
+        transition: background-color 0.3s, transform 0.3s;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        display: flex;
+        align-items: center;
+        justify-content: center;
         a {
             text-decoration: none;
-            color: #333;
+            color: $link-color;
             font-size: 1.2rem;
             display: block;
-        }&:hover {
-            background-color: #e0e0e0;
+            font-family: 'Open Sans', sans-serif;
+        }
+        &:hover {
+            background-color: #b2dfdb;
+            transform: scale(1.05);
         }
     }
 }
 
-
-
 //Seccion horarios de atencion
 
 .sect-horarios {
-    background-color: #1472ec;
+    background-color: $sections-bg;
     padding: 40px 25px;
     text-align: center;
     margin: 40px 0;
-
     h2 {
         font-size: 2rem;
         margin-bottom: 20px;
     }
-
     .horarios-grid {
-        background-color: #1472ec;
         margin-top: 60px;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -235,8 +221,6 @@ footer {
     }
 }
 
-
-
 //Seccion Ubicacion
 
 .sect-ubicacion {
@@ -264,19 +248,16 @@ footer {
                 border-radius: 10px;
             }
         }
-
         .detalles {
             flex: 1;
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-
             p {
                 font-size: 1rem;
                 margin: 10px 0; 
             }
-
             .boton {
                 display: inline-block;
                 text-decoration: none;
@@ -296,7 +277,7 @@ footer {
 
 //Footer
 .footer {
-    background-color: #f8f8f8;
+    background-color: $sections-bg;
     color: #000000;
     padding: 20px 0;
     text-align: center;
