--- a/sass/utilidades/_variables.scss
+++ b/sass/utilidades/_variables.scss
@@ -3,9 +3,10 @@
 $font-stack: Arial, Helvetica, sans-serif;
 $header-bg: #FFFFFF;
 $nav-border-color: #c2c0c093;
-$shadow-color1: rgba(122, 122, 122, 0.192);
+$shadow-color1: rgba(240, 137, 137, 0.192);
 $shadow-color2: rgba(0, 0, 0, 0.06);
 $link-color: rgb(0, 0, 0);
 $button-bg: #007bff;
 $button-hover-bg: #0056b3;
 $transparent-color: transparent;
+$sections-bg: #e0f2f1;
