--- a/sass/utilidades/_variables.scss
+++ b/sass/utilidades/_variables.scss
@@ -6,6 +6,7 @@ $nav-border-color: #c2c0c093;
 $shadow-color1: rgba(240, 137, 137, 0.192);
 $shadow-color2: rgba(0, 0, 0, 0.06);
 $link-color: rgb(0, 0, 0);
+$button-text: rgb(0, 0, 0);
 $button-bg: #007bff;
 $button-hover-bg: #0056b3;
 $transparent-color: transparent;
