--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,7 @@ footer ul li a {
 .boton {
   display: inline-block;
   background-color: #007bff;
-  color: #fff;
+  color: rgb(0, 0, 0);
   text-decoration: none;
   padding: 10px 20px;
   border-radius: 4px;
@@ -272,7 +272,7 @@ footer ul li a {
 .sect-quienes-somos a {
   text-decoration: none;
   font-size: 1rem;
-  color: white;
+  color: black;
   background-color: #007bff;
   padding: 10px 20px;
   border-radius: 5px;
@@ -413,7 +413,7 @@ footer ul li a {
   display: inline-block;
   text-decoration: none;
   background-color: #007bff;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 10px 20px;
   border-radius: 5px;
   margin-top: 10px;
