--- a/sass/main.scss
+++ b/sass/main.scss
@@ -114,7 +114,7 @@ footer {
     a {
         text-decoration: none;
         font-size: 1rem;
-        color: white;
+        color: black;
         background-color: #007bff;
         padding: 10px 20px;
         border-radius: 5px;
@@ -261,7 +261,7 @@ footer {
                 display: inline-block;
                 text-decoration: none;
                 background-color: #007bff;
-                color: white;
+                color: $button-text;
                 padding: 10px 20px;
                 border-radius: 5px;
                 margin-top: 10px;
