--- a/sass/utilidades/_variables.scss
+++ b/sass/utilidades/_variables.scss
@@ -10,4 +10,5 @@ $button-text: rgb(0, 0, 0);
 $button-bg: #007bff;
 $button-hover-bg: #0056b3;
 $transparent-color: transparent;
-$sections-bg: #e0f2f1;
+$sections-bg: #a5daeb;
+$bg-img-footer: url('../../img/footerFisio.jpg');
