--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,7 @@
 }
 .agentes-fisicos img {
   max-width: 700px;
+  max-height: 500px;
 }
 .agentes-fisicos h2 {
   text-align: center;
@@ -304,7 +305,7 @@ footer ul li a {
   margin-top: 100px;
 }
 .sect-servicios .servicio {
-  background-color: #e0f2f1;
+  background-color: #a5daeb;
   padding: 20px;
   border-radius: 10px;
   transition: background-color 0.3s, transform 0.3s;
@@ -326,7 +327,7 @@ footer ul li a {
 }
 
 .sect-horarios {
-  background-color: #e0f2f1;
+  background-image: url("../../img/footerFisio.jpg");
   padding: 40px 25px;
   text-align: center;
   margin: 40px 0;
@@ -343,7 +344,7 @@ footer ul li a {
   overflow: hidden;
 }
 .sect-horarios .horarios-grid div {
-  background: rgba(255, 255, 255, 0.8);
+  background-color: #a5daeb;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -424,7 +425,7 @@ footer ul li a {
 }
 
 .footer {
-  background-color: #e0f2f1;
+  background-image: url("../../img/footerFisio.jpg");
   color: #000000;
   padding: 20px 0;
   text-align: center;
@@ -455,7 +456,51 @@ footer ul li a {
   font-size: 14px;
 }
 
+@media (max-width: 1024px) {
+  .sect-quienes-somos {
+    flex-direction: column;
+  }
+  .sect-quienes-somos div {
+    order: 2;
+  }
+  .sect-quienes-somos img {
+    order: 1;
+  }
+  .sect-quienes-somos p {
+    padding: 10px;
+  }
+  .sect-quienes-somos a {
+    font-size: 0.9rem;
+    padding: 8px 16px;
+  }
+  .agentes-fisicos {
+    flex-direction: column;
+    align-items: center;
+  }
+  .agentes-fisicos img {
+    max-width: 100%;
+  }
+  .agentes-fisicos div {
+    text-align: left;
+  }
+}
 @media (max-width: 768px) {
+  .sect-quienes-somos {
+    flex-direction: column;
+  }
+  .sect-quienes-somos div {
+    order: 2;
+  }
+  .sect-quienes-somos img {
+    order: 1;
+  }
+  .sect-quienes-somos p {
+    padding: 10px;
+  }
+  .sect-quienes-somos a {
+    font-size: 0.9rem;
+    padding: 8px 16px;
+  }
   .quienes-somos-pres .card {
     flex: 1 1 calc(100% - 40px);
   }
@@ -515,22 +560,6 @@ footer ul li a {
   }
   .ubicacion-grid .mapa iframe {
     height: 300px;
-  }
-  .sect-quienes-somos {
-    flex-direction: column;
-  }
-  .sect-quienes-somos div {
-    order: 2;
-  }
-  .sect-quienes-somos img {
-    order: 1;
-  }
-  .sect-quienes-somos p {
-    padding: 10px;
-  }
-  .sect-quienes-somos a {
-    font-size: 0.9rem;
-    padding: 8px 16px;
   }
 }
 
