--- a/sass/main.scss
+++ b/sass/main.scss
@@ -175,7 +175,7 @@ footer {
 //Seccion horarios de atencion
 
 .sect-horarios {
-    background-color: $sections-bg;
+    background-image: $bg-img-footer;
     padding: 40px 25px;
     text-align: center;
     margin: 40px 0;
@@ -190,7 +190,7 @@ footer {
         gap: 20px;
         overflow: hidden;
         div{
-            background: rgba(255, 255, 255, 0.8);
+            background-color: $sections-bg;
             padding: 20px;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -276,7 +276,7 @@ footer {
 
 //Footer
 .footer {
-    background-color: $sections-bg;
+    background-image: $bg-img-footer;
     color: #000000;
     padding: 20px 0;
     text-align: center;
@@ -307,12 +307,61 @@ footer {
     }
   }
 
+//Responsive Tablets
 
+@media (max-width: 1024px) {
+
+    .sect-quienes-somos{
+        flex-direction: column;
+        div {
+            order: 2;
+        }
+        img {
+            order: 1;
+        }
+        p {
+            padding: 10px;
+        }
+        a {
+            font-size: 0.9rem;
+            padding: 8px 16px; 
+        }
+    }
+
+    .agentes-fisicos {
+        flex-direction: column;
+        align-items: center;
+        img {
+            max-width: 100%; 
+        }
+        div {
+            text-align: left;
+        }
+    }
+
+}
 
 //Responsive Moviles
 
 
 @media (max-width: 768px) {
+
+    .sect-quienes-somos{
+        flex-direction: column;
+        div {
+            order: 2;
+        }
+        img {
+            order: 1;
+        }
+        p {
+            padding: 10px;
+        }
+        a {
+            font-size: 0.9rem;
+            padding: 8px 16px; 
+        }
+    }
 
     .quienes-somos-pres .card {
         flex: 1 1 calc(100% - 40px);
@@ -389,20 +438,4 @@ footer {
         }
     }
 
-    .sect-quienes-somos{
-        flex-direction: column;
-        div {
-            order: 2;
-        }
-        img {
-            order: 1;
-        }
-        p {
-            padding: 10px;
-        }
-        a {
-            font-size: 0.9rem;
-            padding: 8px 16px; 
-        }
-    }
 }
