--- a/sass/utilidades/_agentes-fisicos.scss
+++ b/sass/utilidades/_agentes-fisicos.scss
@@ -9,6 +9,7 @@
     flex-direction: row;
     img{
         max-width: 700px;
+        max-height: 500px;
     }
     h2{
         text-align: center;
