--- a/sass/utilidades/_agentes-fisicos.scss
+++ b/sass/utilidades/_agentes-fisicos.scss
@@ -2,22 +2,24 @@
     display: flex;
     padding: 50px;
     flex-direction: column;
-  }
-
+  } 
   .agentes-fisicos {
     display: flex;
     flex-direction: row;
-    img{
-        max-width: 700px;
-        max-height: 500px;
+    flex-wrap: wrap;
+    img {
+      width: 100%;
+      height: auto;
+      max-width: 700px;
     }
-    h2{
-        text-align: center;
-        font-size: 2rem;
-        margin-bottom: 25px;
+    h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 25px;
     }
-    p{
-        font-size: 1rem;
-        padding: 25px;
+    p {
+      font-size: 1rem;
+      padding: 25px;
+      color: red;
     }
   }
