--- a/css/styles.css
+++ b/css/styles.css
@@ -99,10 +99,12 @@
 .agentes-fisicos {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 .agentes-fisicos img {
+  width: 100%;
+  height: auto;
   max-width: 700px;
-  max-height: 500px;
 }
 .agentes-fisicos h2 {
   text-align: center;
@@ -112,6 +114,7 @@
 .agentes-fisicos p {
   font-size: 1rem;
   padding: 25px;
+  color: red;
 }
 
 .servicios-container {
