--- a/sass/utilidades/_variables.scss
+++ b/sass/utilidades/_variables.scss
@@ -11,4 +11,4 @@ $button-bg: #007bff;
 $button-hover-bg: #0056b3;
 $transparent-color: transparent;
 $sections-bg: #a5daeb;
-$bg-img-footer: url('../../img/footerFisio.jpg');
+$bg-img-footer: url('../../img/footerVerde.jpg');
