--- a/sass/main.scss
+++ b/sass/main.scss
@@ -148,6 +148,9 @@ footer {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 15px;
         margin-top: 100px;
+        i{
+            color: #156cddc7;
+        }
     }
     .servicio {
         background-color: $sections-bg;
@@ -175,7 +178,8 @@ footer {
 //Seccion horarios de atencion
 
 .sect-horarios {
-    background-image: $bg-img-footer;
+    background-color: #156cddc7;
+    width: 100%;
     padding: 40px 25px;
     text-align: center;
     margin: 40px 0;
@@ -276,7 +280,7 @@ footer {
 
 //Footer
 .footer {
-    background-image: $bg-img-footer;
+    background-color: #156cddc7;
     color: #000000;
     padding: 20px 0;
     text-align: center;
